:sparkles: Adapted to mobile

--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -9,7 +9,7 @@
     "title": "Mint",
     "subtitle": "Mint valuable NFT",
     "token_id": "Token ID Generate by smart contract",
-    "upload": "+ Upload image less than 1 MB",
+    "upload": "Upload image less than 1 MB",
     "advance_option": "Advance Option",
     "batch_mint": "Batch Mint",
     "mint_now": "Mint Now",
